# Agents-Apply

./: .env.example  .gitignore  DEPLOYMENT.md  LICENSE  README.md  cleanup.bat  cleanup.sh  docker-compose.yml
backend/: .dockerignore  Dockerfile  generate_keys.py  init_db.py  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py
backend/app/api/v1/: api_keys.py  article.py  auth.py  health.py  styles.py  users.py  wechat.py
backend/app/core/: config.py  db.py  logging.py  security.py
backend/app/models/: __init__.py  article.py  style.py  task.py  user.py  user_api_key.py  wechat_config.py
backend/app/schemas/: __init__.py  api_key.py  article.py  style.py  task.py  user.py  wechat.py
backend/app/services/: mcp_service.py  style_service.py  wechat_service.py
backend/app/utils/: encryption.py  html_sanitizer.py
backend/tests/: conftest.py
backend/tests/test_api/: test_auth.py  test_health.py
backend/tests/test_services/: __init__.py
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/api/: apikey.ts  article.ts  auth.ts  style.ts  wechat.ts
frontend/src/assets/: variables.css
frontend/src/components/: ApiKeyForm.vue  StyleForm.vue  WechatConfigForm.vue
frontend/src/layouts/: MainLayout.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts
frontend/src/types/: auth.ts
frontend/src/utils/: http.ts
frontend/src/views/: Articles.vue  Dashboard.vue  Login.vue  Register.vue  Settings.vue  Styles.vue
wechat_agent_mcp/: .env.example  README.md  config.py  list_drafts.py  main.py  pyproject.toml  styles.md  styles_news.md
wechat_agent_mcp/core/: agent.py  client.py
wechat_agent_mcp/lib/: mcp_helper.py
wechat_agent_mcp/models/: article.py
wechat_agent_mcp/skills/editor/: server.py
wechat_agent_mcp/skills/media/: server.py
wechat_agent_mcp/skills/research/: server.py
wechat_agent_mcp/skills/wechat/: server.py
wechat_agent_mcp/skills/writer/: server.py
wechat_agent_mcp/wechat_agent_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
